deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: jmeritt/elasticsearch
        ports:
        - containerPort: 9300
          name: transport
        - containerPort: 9200
          name: http
        # livenessProbe:
        #   tcpSocket:
        #     port: transport
        #   initialDelaySeconds: 20
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_cluster/health
        #     port: http
        #   initialDelaySeconds: 20
        #   timeoutSeconds: 5
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
        - name: logs
          mountPath: /logs
      volumes:
      - name: config-src
        configMap:
          name: es-config
      - name: data
        emptyDir:
      - name: config
        emptyDir:
      - name: logs
        emptyDir:
  # volumeClaimTemplates:
  # - metadata:
  #     name: storage
  #   spec:
  #     storageClassName: standard
  #     accessModes: [ ReadWriteOnce ]
  #     resources:
  #       requests:
  #         storage: 2Gi
