ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: es.local
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
